# rust-web-model

./: Cargo.toml  README.md
src/: main.rs
src/config/: dev.toml
src/controller/: mod.rs
src/controller/init/: app_start.rs  config.rs  log.rs  mod.rs  route.rs  url.rs  web.rs
src/model/clickhouse/: proxy.rs
src/model/mysql/: proxy.rs
