[package]
name = "cabinet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.7"
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.71"
toml = "0.5.9"
serde = { version = "1.0.201", features = ["derive"] }
log = "0.4"
fast_log = {version = "1.5" , features = ["lz4","zip","gzip"]}
lazy_static = "1.4"
rbs = { version = "4.5",features = ["debug_mode"]}
rbatis = { version = "4.5"}
rbdc-mysql={version="4.5"}
rbdc={version="4.5"}
clickhouse-rs = { git = "https://github.com/suharev7/clickhouse-rs",     features = ["default"]}
tokio = { version = "1.41.0", features = ["full"] }
chrono = "0.4.38"
futures = "0.3.30"


